--- a/todo.txt
+++ b/todo.txt
@@ -11,3 +11,9 @@ Get create_scale_team to work.
 Use the info that we got from the 42api script
 if 42api returns False, error has occurred.
 add some additional error handling.
+
+
+
+REQUIREMENTS LIST:
+from pip: slack slack-sdk slackeventsapi flask
+from apt: python3-flask
